--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,11 +11,10 @@ updates:
     - ossf/scorecard-maintainers
   open-pull-requests-limit: 10
   # For the website code in scorecards-site.
-  - package-ecosystem: npm
-    directory: '/'
+  - package-ecosystem: yarn
+    directory: '/scorecards-site'
     schedule:
-      interval: daily
-      time: '00:00'
+      interval: weekly
     open-pull-requests-limit: 10
     reviewers:
       - ossf/scorecard-maintainers
