--- a/scorecards-site/package.json
+++ b/scorecards-site/package.json
@@ -78,6 +78,7 @@
     "@nuxtjs/svg/**/**/postcss": "^8.2.13",
     "rehype-add-classes/**/nth-check": "^2.0.1",
     "@nuxtjs/svg/**/**/**/**/**/nth-check": "^2.0.1",
-    "**/loader-utils": "^2.0.3"
+    "**/loader-utils": "^2.0.3",
+    "**/xml2js": "^0.5.0"
   }
 }
